update isBlack to trim().isEmpty()