@@ -58,7 +58,7 @@ public class MenuItem {
     }
 
     public void setName(String name) {
-        if (name == null || name.isBlank())
+        if (name == null || name.trim().isEmpty())
             throw new IllegalArgumentException("Item name must not be empty.");
         this.name = name;
     }
